# announcement-api

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  openapi.yaml  pyproject.toml
env/: .env.example
scripts/: app-entrypoint.sh
src/: main.py  settings.py
src/apps/announcements/: __init__.py  constances.py  endpoints.py  manager.py  schemas.py
src/apps/auth/: __init__.py  config.py  dependencies.py  manager.py  routers.py  schemas.py
src/apps/categories/: __init__.py  endpoints.py  managers.py
src/apps/users/: __init__.py  endpoints.py  manager.py  schemas.py
src/database/: connection.py  manager.py
src/database/models/: __init__.py  announcement.py  base.py  category.py  comments.py  user.py
src/endpoints/: __init__.py  heathcheck.py
src/exceptions/: __init__.py  exceptions.py  handlers.py
src/migrations/: env.py
src/migrations/versions/: 1475ad158bc0_.py  44092824386c_.py  64c8ed112095_.py  80b7213a58ae_.py  f5d7df36be7a_.py
